assets/stylesheets/common/discourse-post-event-invitees.scss
.discourse-post-event-invitees-modal {
  .filter {
    width: 100%;
  }
  .invitees {
    display: flex;
    padding: 0;
    margin: 0;
    flex-direction: column;

    .invitee {
      list-style: none;
      display: flex;
      flex: 1;
      padding: 0.5em;
      justify-content: space-between;
      align-items: center;
      border-bottom: 1px solid var(--primary-low, $primary-low);

      &:last-child {
        border: none;
      }

      .user {
        .username {
          margin-left: 0.5em;
        }
      }

      .status {
        margin-left: 1em;

        &.going {
          color: var(--success, $success);
        }

        &.not_going {
          color: var(--danger, $danger);
        }
      }
    }
  }
}

